# Resolv-LLC

./: .gitignore  Buffer.cpp  CMakeLists.txt  ContainerSlot.cpp  ContainerSlot.h  Makefile  Misc.h  Node.cpp  Node.h  NodeQueue.cpp  NodeQueue.h  README.md  ShipBay.cpp  ShipBay.h  Tree.cpp  Tree.h  cmd.cpp  creafile.cpp  inro.txt  logcreate.cpp  logcreate.h  test.cpp  tittle.txt  webserver.cpp  webservertest.cpp
.github/workflows/: deckware_tests.yml
Info/: Before_CS179_Resolv_Master_Slides.pptx
classes/: Buffer.cpp  Buffer.h  ContainerSlot.cpp  ContainerSlot.h  ShipBay.cpp  ShipBay.h
classes/node_classes/: Node.cpp  Node.h  NodeQueue.h
dependencies/: soruces.md
test/: CMakeLists.txt  DeckwareTests.cpp  DeckwareTests.hpp  HOWTO.md
webpage/: webpage.rar
webpage/CSS/: bal.css  fileup.css  intro.css  load.css  upload.css  uploadpage.css
webpage/HTML/: balance.html  fileupload.html  intro.html  load.html  logintest.html  noticeblock.html
webpage/JS/: balance.js  customnotes.js  done.js  fileloadupload.js  fileupload.js  fileupload2.js  fin.js  hiddennotes.js  intro.js  load.js  loadprompt.js  process.js  selection.js  selection2.js  startfunction.js  uploadpage.js  username.js
webserver/: httplib.h  webserver.cpp
